@@ -19,8 +19,8 @@ import org.asynchttpclient.DefaultAsyncHttpClientConfig;
 
 public class Google20AsyncAHCExample {
 
-    private static final String NETWORK_NAME = "G+ Async";
-    private static final String PROTECTED_RESOURCE_URL = "https://www.googleapis.com/plus/v1/people/me";
+    private static final String NETWORK_NAME = "Google Async";
+    private static final String PROTECTED_RESOURCE_URL = "https://www.googleapis.com/oauth2/v3/userinfo";
 
     private Google20AsyncAHCExample() {
     }
